crates/strider-analyze/tests/snapshots/v3__arm_thumb__complex__if_bit_clear_call.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v13" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v13" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "18" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x58c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "19" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "23" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "19" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v24" [color="#888888", style=dashed];
  "v24" -> "23" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v25" [color="#888888", style=dashed];
  "v25" -> "23" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v26" [color="#888888", style=dashed];
  "v26" -> "23" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v27" [color="#888888", style=dashed];
  "v27" -> "23" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "22" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
